force-app/main/default/objects/Custom_Exchange_Rate__c/Custom_Exchange_Rate__c.object-meta.xml
<CustomObject>
    <description>This object is for NCL to maintain exchange rate depicted by Singapore Custom for the purpose of conversion of vehicle cots in foreign currencies to SGD.</description>
    <label>Custom Exchange Rate</label>
    <nameField>
        <displayFormat>CXR-{YYYYMM}-{00000}</displayFormat>
        <label>Custom Exchange Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Exchange Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>