force-app/main/default/objects/Custom_Exchange_Rate__c/fields/Custom_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Custom_Exchange_Rate__c</fullName>
    <label>Custom Exchange Rate</label>
    <precision>8</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>