force-app/main/default/objects/Custom_Exchange_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Currency_Code__c</columns>
    <columns>Custom_Exchange_Rate__c</columns>
    <columns>Valid_From__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>